--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
     ports:
       - 5432:5432
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     command: postgres -c max_connections=300
     healthcheck:
       test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres" ]
@@ -20,12 +22,9 @@ services:
           memory: "140MB"
 
   api01:
-    build: .
     image: dscorzoni/rinha-fastapi
     hostname: api01
     command: uvicorn app.main:app --proxy-headers --host 0.0.0.0 --port 8000
-    volumes:
-      - .:/home/code
     ports:
       - 8001:8000
     depends_on:
@@ -41,8 +40,6 @@ services:
     image: dscorzoni/rinha-fastapi
     hostname: api02
     command: uvicorn app.main:app --proxy-headers --host 0.0.0.0 --port 8000
-    volumes:
-      - .:/home/code
     ports:
       - 8002:8000
     depends_on:
